--- a/key-bar-qr-menu/index.html
+++ b/key-bar-qr-menu/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Key-Bar-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Key Bar - QR Меню</title>
+    <title>Key Bar</title>
   </head>
   <body>
     <div id="root"></div>
