--- a/key-bar-qr-menu/index.html
+++ b/key-bar-qr-menu/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Key-Bar-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo key.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Key Bar</title>
   </head>
